--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,7 +1,7 @@
 .PHONY: all clean
 
 CC := gcc
-CFLAGS := -O3 -std=c11 -Wall -Wextra -pedantic -Wno-missing-field-initializers
+CFLAGS := -O3 -std=c17 -Wall -Wextra -pedantic -Wno-missing-field-initializers
 
 tools := \
 	lzcomp \
@@ -20,7 +20,7 @@ png_dimensions: common.h
 scan_includes: common.h
 stadium: common.h
 
-lzcomp: CFLAGS = -O3 -flto -std=c11 -Wall -Wextra -pedantic -Wno-strict-overflow -Wno-sign-compare
+lzcomp: CFLAGS += -flto
 lzcomp: $(wildcard lz/*.c) $(wildcard lz/*.h)
 	$(CC) $(CFLAGS) -o $@ lz/*.c
 
